--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -9,15 +9,16 @@
   <script type="module" defer src="./components/NavBar.js"></script>
   <title>Frontend Mentor | E-commerce product page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  <nav-bar></nav-bar>
+  <nav-bar>
+
+      <img slot="logo" src="./images/logo.svg" alt="logo">
+      <img slot="cart" src="./images/icon-cart.svg" alt="cart">
+      <img slot="user-pic" src="./images/image-avatar.png" alt="user">
+
+  </nav-bar>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
