--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -16,12 +16,14 @@
 
       <img slot="logo" src="./images/logo.svg" alt="logo">
       <img slot="cart" src="./images/icon-cart.svg" alt="cart">
-      <img slot="user-pic" src="./images/image-avatar.png" alt="user">
+      <img slot="user-pic" src="./images/image-avatar.png" alt="user" height="40px">
 
   </nav-bar>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script type="module" defer src="main.js" defer></script>
 </body>
 </html>
