--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -1,29 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" type="text/css" href="./public/stylesheets/style.css">
-  <script type="module" defer src="./components/NavBar.js"></script>
-  <title>Frontend Mentor | E-commerce product page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./public/stylesheets/style.css"
+    />
+    <script type="module" defer src="./components/NavBar.js"></script>
+    <title>Frontend Mentor | E-commerce product page</title>
+  </head>
+  <body>
+    <nav-bar>
+      <img
+        slot="mobile-menu-icon"
+        src="./images/icon-menu.svg"
+        alt="mobile menu icon"
+      />
+      <img
+        slot="mobile-menu-close-icon"
+        src="./images/icon-close.svg"
+        alt="mobile menu icon close button"
+      />
+      <img slot="logo" src="./images/logo.svg" alt="logo" />
+      <img slot="cart" src="./images/icon-cart.svg" alt="cart" />
+      <img
+        slot="user-pic"
+        src="./images/image-avatar.png"
+        alt="user"
+        height="40px"
+      />
+    </nav-bar>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
 
-</head>
-<body>
-
-  <nav-bar>
-
-      <img slot="logo" src="./images/logo.svg" alt="logo">
-      <img slot="cart" src="./images/icon-cart.svg" alt="cart">
-      <img slot="user-pic" src="./images/image-avatar.png" alt="user" height="40px">
-
-  </nav-bar>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-
-  <script type="module" defer src="main.js" defer></script>
-</body>
+    <script type="module" defer src="main.js" defer></script>
+  </body>
 </html>
