added cart popup

--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -20,7 +20,7 @@
     <title>Frontend Mentor | E-commerce product page</title>
   </head>
   <body>
-    <nav-bar>
+    <nav-bar cart-items-number="0">
       <img
         slot="mobile-menu-icon"
         src="./images/icon-menu.svg"
@@ -46,7 +46,7 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div>
-
-    <script type="module" defer src="main.js" defer></script>
+    <script type="module" defer src="shop.js"></script>
+    <script type="module" defer src="main.js"></script>
   </body>
 </html>
